# BBS

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  README.md
ansi/: welcome.txt
assets/: welcome.ans
claude_plans/: 2026-02-25_214759_whimsical-shimmying-wren.md  2026-02-25_221502_whimsical-shimmying-wren.md  2026-02-25_224622_whimsical-shimmying-wren.md  2026-02-25_whimsical-shimmying-wren.md  2026-02-26_054444_whimsical-shimmying-wren.md  2026-02-26_075819_whimsical-shimmying-wren.md  2026-02-26_whimsical-shimmying-wren.md
config/: default.toml
crates/bbs-core/: Cargo.toml
crates/bbs-core/src/: auth.rs  board.rs  db.rs  lib.rs  message.rs  tests.rs  user.rs
crates/bbs-doors/: Cargo.toml
crates/bbs-doors/src/: api.rs  db.rs  dos.rs  lib.rs  registry.rs  runner.rs  session.rs  store.rs
crates/bbs-nntp/: Cargo.toml
crates/bbs-nntp/src/: lib.rs
crates/bbs-runtime/: Cargo.toml
crates/bbs-runtime/src/: api.rs  lib.rs  registry.rs  session.rs  throttle.rs
crates/bbs-server/: Cargo.toml
crates/bbs-server/src/: main.rs
crates/bbs-ssh/: Cargo.toml
crates/bbs-ssh/src/: lib.rs
crates/bbs-telnet/: Cargo.toml
crates/bbs-telnet/src/: lib.rs
crates/bbs-tui/: Cargo.toml
crates/bbs-tui/src/: lib.rs  terminal.rs
crates/bbs-web/: Cargo.toml
crates/bbs-web/src/: lib.rs
docs/plans/: 2026-03-04-phase1-door-db-api.md  2026-03-04-phase2-upgrade-existing-doors.md  2026-03-04-phase3-sre-data-layer.md  2026-03-04-phase4a-sre-economy.md  2026-03-04-phase4b-sre-combat-diplomacy-covert.md  2026-03-04-phase4c-sre-support-systems.md  2026-03-04-sre-clone-design.md
doors/dragonsbane/: main.lua  schema.sql
doors/example/: main.lua  schema.sql
doors/sre/: main.lua  schema.sql
doors/sre/lib/: bank.lua  combat.lua  covert.lua  db.lua  diplomacy.lua  economy.lua  empire.lua  lottery.lua  messages.lua  pirates.lua  population.lua  research.lua  ui.lua
migrations/: 0001_initial.sql  0002_mail.sql  0003_bulletins.sql  0005_board_visits.sql
scripts/: auth.lua  boards.lua  bulletins.lua  mail.lua  main.lua  menu.lua  profile.lua  sysop.lua  who.lua
