[workspace]
members = [
    "crates/bbs-core",
    "crates/bbs-runtime",
    "crates/bbs-doors",
    "crates/bbs-server",
    "crates/bbs-telnet",
    "crates/bbs-ssh",
    "crates/bbs-web",
    "crates/bbs-nntp",
    "crates/bbs-tui",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sqlx               = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
mlua               = { version = "0.9", features = ["lua54", "vendored", "async", "send"] }
