[package]
name    = "bbs-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
mlua      = { workspace = true }
bbs-core  = { path = "../bbs-core" }
bbs-doors = { path = "../bbs-doors" }
bbs-tui   = { path = "../bbs-tui" }
