[package]
name    = "bbs-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
bbs-runtime = { path = "../bbs-runtime" }
bbs-tui     = { path = "../bbs-tui" }
russh       = "0.44"
