[package]
name    = "bbs-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
bytes       = { workspace = true }
futures-util = "0.3"
axum        = { version = "0.7", features = ["ws"] }
bbs-runtime = { path = "../bbs-runtime" }
